[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Zombies/ComponentManager.gd" type="Script" id=1]

[node name="ComponentManager" type="Node2D"]
script = ExtResource( 1 )

[node name="JustNowSpawned" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="ResetThisColor" type="Timer" parent="."]
wait_time = 0.3

[node name="DebuffDegrade" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="JustNowSpawned" to="." method="_on_JustNowSpawned_timeout"]
[connection signal="timeout" from="ResetThisColor" to="." method="_on_ResetThisColor_timeout"]
[connection signal="timeout" from="DebuffDegrade" to="." method="_on_DebuffDegrade_timeout"]
